Fixed horizontal scroll bar in PageTitle

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,7 +45,7 @@ main {
   color: var(--seashell);
   display: block;
   padding: 0.7rem;
-  width: 100vw;
+  max-width: 100vw;
   margin: var(--navbarHeight) 0 1.5rem;
 }
 a {
